ido-tth/main/default/objects/tth_Booking__c/tth_Booking__c.object-meta.xml
<CustomObject>
    <description>Top level object that represents the planning aspect of a particular portion within a trip.  Once a booking is completed/paid for/ticketed, a reservation (separate object) should be created to represent the actual instance(s) of the elements within the booking.</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>