ido-tth/main/default/objects/tth_Booking__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>