ido-tth/main/default/objects/tth_Booking__c/fields/tth_Allocated_Room__c.field-meta.xml
<CustomField>
    <fullName>tth_Allocated_Room__c</fullName>
    <label>Allocated Room</label>
    <length>6</length>
    <type>Text</type>
</CustomField>