ido-tth/main/default/objects/tth_Booking__c/fields/tth_Amenities_pl__c.field-meta.xml
<CustomField>
    <fullName>tth_Amenities_pl__c</fullName>
    <description>Multi select Picklist to show which amenities are included within the booking. Used by the Amenities Icon formula field</description>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Amenities</valueSetName>
    </valueSet>
</CustomField>