ido-tth/main/default/objects/tth_Booking__c/fields/tth_Booking_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_Confirmation__c</fullName>
    <description>For cases where the term Record Locator is not appropriate and the PNR format is not appropriate (e.g. Hotels will have a Booking Reference/Confirmation number of some sort)</description>
    <label>Booking Confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>