ido-tth/main/default/objects/tth_Booking__c/fields/tth_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_Reference__c</fullName>
    <description>Dynamic field to change what is displayed as the Booking Name dependent on the type of booking (Flight vs Hotel etc)</description>
    <formula>HYPERLINK(&#39;/&#39;+ Id , IF(ISPICKVAL( tth_Booking_Type__c , &#39;Flight&#39;),  tth_Record_Locator__c ,  tth_Booking_Confirmation__c ))</formula>
    <label>Booking Reference</label>
    <type>Text</type>
</CustomField>