ido-tth/main/default/objects/tth_Booking__c/fields/tth_Booking_Start__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_Start__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>