ido-tth/main/default/objects/tth_Booking__c/fields/tth_Booking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_Start_Date__c</fullName>
    <description>If using Relative dates, Booking Start is Today minus Days Ago, or else using the absolute Start Date field</description>
    <formula>IF( $CustomMetadata.tth_Booking_ReservationSettings__mdt.default.Use_Relative_Dates__c , today() -  tth_Days_Ago__c , tth_Booking_Start__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Start</label>
    <type>Date</type>
</CustomField>