ido-tth/main/default/objects/tth_Booking__c/fields/tth_Bot_Summary__c.field-meta.xml
<CustomField>
    <fullName>tth_Bot_Summary__c</fullName>
    <description>Used by chat bots to provide a summary of the booking.</description>
    <formula>IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Flight&#39;) , &#39;You are on flight &#39; +  tth_Flight_Number__c + &#39; departing at &#39; +  tth_Time__c + &#39; sitting in &#39; +  TEXT(tth_Travel_Class__c) + &#39; in seat &#39; +  tth_Allocated_Seat__c + &#39; and your reservation number is &#39; +  tth_Record_Locator__c ,
   IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Car&#39;) , &#39;You are picking up your car from &#39; +  tth_Location__c + &#39; at &#39; +  tth_Time__c + &#39; and your reservation number is &#39; + tth_Booking_Confirmation__c,
      IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Hotel&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Accomodation&#39;) , &#39;You are staying at &#39; + tth_Location__c + &#39; in a &#39; +  TEXT(tth_Room_Type__c) + &#39; room and your reservation number is &#39; + tth_Booking_Confirmation__c, 
         IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Rail&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Bus&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Ferry&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Transport&#39;), &#39;You are on &#39; + tth_Flight_Number__c + &#39; departing from &#39; +  tth_Location__c + &#39; at &#39; +  tth_Time__c + &#39; in seat &#39; +  tth_Allocated_Seat__c + &#39; on ticket number &#39; +  tth_Booking_Confirmation__c , &#39;&#39;)
      )
   )
)</formula>
    <label>Bot Summary</label>
    <type>Text</type>
</CustomField>