ido-tth/main/default/objects/tth_Booking__c/fields/tth_Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>tth_Change_Summary__c</fullName>
    <description>For suggested bookings or booking changes, summary of the changes made - typically leveraged by Bots</description>
    <label>Change Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>