ido-tth/main/default/objects/tth_Booking__c/fields/tth_Fare_Basis_Code__c.field-meta.xml
<CustomField>
    <fullName>tth_Fare_Basis_Code__c</fullName>
    <label>Fare Basis Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Airline_Fare_Basis_Code</valueSetName>
    </valueSet>
</CustomField>