ido-tth/main/default/objects/tth_Booking__c/fields/tth_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>tth_Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>