ido-tth/main/default/objects/tth_Booking__c/fields/tth_Is_Suggested_Booking__c.field-meta.xml
<CustomField>
    <fullName>tth_Is_Suggested_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a booking that has been suggested for travel disruptions and needs to be approved by the traveler to become official</description>
    <label>Is Suggested Booking</label>
    <type>Checkbox</type>
</CustomField>