ido-tth/main/default/objects/tth_Booking__c/fields/tth_Location__c.field-meta.xml
<CustomField>
    <fullName>tth_Location__c</fullName>
    <description>For hospitality type bookings or any that require a specific location to be noted</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>