ido-tth/main/default/objects/tth_Booking__c/fields/tth_Original_Booking__c.field-meta.xml
<CustomField>
    <fullName>tth_Original_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for altered bookings and when new ones are suggested</description>
    <label>Original Booking</label>
    <referenceTo>tth_Booking__c</referenceTo>
    <relationshipLabel>Related Bookings</relationshipLabel>
    <relationshipName>OriginalBookings</relationshipName>
    <type>Lookup</type>
</CustomField>