ido-tth/main/default/objects/tth_Booking__c/fields/tth_Record_Locator__c.field-meta.xml
<CustomField>
    <fullName>tth_Record_Locator__c</fullName>
    <description>Commonly referred to as: PNR, Booking Reference, Agency Locator, CRS, etc</description>
    <label>Record Locator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>