ido-tth/main/default/objects/tth_Booking__c/fields/tth_Requests__c.field-meta.xml
<CustomField>
    <fullName>tth_Requests__c</fullName>
    <description>Non chargeable requests from traveler</description>
    <label>Requests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>tth_Booking_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>tth_Requests</valueSetName>
    </valueSet>
</CustomField>