ido-tth/main/default/objects/tth_Booking__c/fields/tth_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>tth_Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Hospitality_Room_Types</valueSetName>
    </valueSet>
</CustomField>