ido-tth/main/default/objects/tth_Booking__c/fields/tth_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>tth_Status_Icon__c</fullName>
    <formula>IF( tth_Rebooking_Required__c ,  
    IMAGE(&quot;/resource/tth_Booking_Status_Icons/Attention.png&quot;, &quot;Rebooking Required&quot; , 40, 40) ,
    IMAGE(&quot;/resource/tth_Booking_Status_Icons/&quot;+ TEXT( tth_Status__c ) +&quot;.png&quot;, TEXT( tth_Status__c ) , 40, 40))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>