ido-tth/main/default/objects/tth_Booking__c/fields/tth_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>tth_Ticket_ID__c</fullName>
    <description>Ticket confirmation/identification number</description>
    <label>Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>