ido-tth/main/default/objects/tth_Booking__c/fields/tth_Time__c.field-meta.xml
<CustomField>
    <fullName>tth_Time__c</fullName>
    <defaultValue>&quot;09:30am&quot;</defaultValue>
    <description>Text representation of the Time of the booking</description>
    <label>Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>