ido-tth/main/default/objects/tth_Booking__c/fields/tth_Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>tth_Travel_Class__c</fullName>
    <label>Travel Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Airline_Travel_Class</valueSetName>
    </valueSet>
</CustomField>