ido-tth/main/default/objects/tth_Booking__c/fields/tth_Traveler__c.field-meta.xml
<CustomField>
    <fullName>tth_Traveler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Traveler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>