ido-tth/main/default/objects/tth_Booking__c/fields/tth_Trip__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What trip is this booking related to?</description>
    <label>Trip</label>
    <referenceTo>tth_Trip__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>